  building the error code translation function for freetype 2.  This
  meant most errors came out as numbers.
- add a note to the README on how to get font suitcases and dfont files
  working on OS X.
- add dfont to the list of extensions supported by ft2
- document Imager::Font->new()'s index parameter
- added concept index to Imager.pm's POD
- the gradgen filter now does the same color value conversion that
  Imager's drawing functions do.
- added trivial multiple master support via the FT2 driver
- added .pcf and .pcf.gz to the list of extensions supported by ft2
- the tiff reader now puts warning messages produced during reading into
  the i_warning tag.
  Resolves: https://rt.cpan.org/Ticket/Display.html?id=8722
- the i_xres and i_yres tags are now stored in a resolution similar
  to their source.
  Resolves: https://rt.cpan.org/Ticket/Display.html?id=8520
- added tiff_resolutionunit_name tag when reading tiff files
- Makefile.PL now attempts to use freetype-config to configure freetype 2
  and pkg-config to configure libpng.
- avoid complaining about include/lib directories we pull from 
  perl's config or we have built-in
- Makefile.PL now builds imconfig.h with #defines for libraries
  present (and for the GIF library version) rather than putting them
  into CFLAGS
- scanning for required include files is now down by directory rather
  than by file, using -e to check for the existence for a file rather than
  doing an eq against every filename in the directory.
- previously we only checked a candidate include directory for freetype.h
  to consider it a valid FT1.x include directory.  We now check if it
  contains fterrors.h too, if it does, then it's from a FT2 installation
  and we ignore it.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
